--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prism-react-renderer",
+  "name": "@renbaoshuo/prism-react-renderer",
   "version": "1.3.5",
   "description": "Renders highlighted Prism output using React",
   "sideEffects": false,
